clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_with_command_substitution.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 68
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "x=$(pwd)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "$(pwd)",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=$(pwd)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
