clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_declare_assignment.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 243
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "declare -i x=5",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "declare",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-i",
                    loc: "[location]",
                  )),
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "5",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=5",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
