clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_local_assignment.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 232
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "local x=5",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "local",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "5",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=5",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
