clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_multiple_assignments.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 186
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "x=1 y=2 z=3",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "1",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=1",
                    loc: "[location]",
                  )),
                  AssignmentWord(Assignment(
                    name: VariableName("y"),
                    value: Scalar(Word(
                      value: "2",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "y=2",
                    loc: "[location]",
                  )),
                  AssignmentWord(Assignment(
                    name: VariableName("z"),
                    value: Scalar(Word(
                      value: "3",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "z=3",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
